Updated with fix for tooltip flickering; added hide action on mouse click when keepAlive option is set to true

--- a/tipTip.css
+++ b/tipTip.css
@@ -43,11 +43,14 @@
 
 #tiptip_arrow, #tiptip_arrow_inner {
 	position: absolute;
+	height: 0;
+	width: 0;
+}
+
+#tiptip_arrow_inner {
 	border-color: transparent;
 	border-style: solid;
 	border-width: 6px;
-	height: 0;
-	width: 0;
 }
 
 #tiptip_holder.tip_top #tiptip_arrow {
@@ -71,29 +74,25 @@
 }
 
 #tiptip_holder.tip_top #tiptip_arrow_inner {
-	margin-top: -7px;
-	margin-left: -6px;
+	border-bottom-width: 0px;
 	border-top-color: rgb(25,25,25);
 	border-top-color: rgba(25,25,25,0.92);
 }
 
 #tiptip_holder.tip_bottom #tiptip_arrow_inner {
-	margin-top: -5px;
-	margin-left: -6px;
+	border-top-width: 0px;
 	border-bottom-color: rgb(25,25,25);
 	border-bottom-color: rgba(25,25,25,0.92);
 }
 
 #tiptip_holder.tip_right #tiptip_arrow_inner {
-	margin-top: -6px;
-	margin-left: -5px;
+	border-left-width: 0px;
 	border-right-color: rgb(25,25,25);
 	border-right-color: rgba(25,25,25,0.92);
 }
 
 #tiptip_holder.tip_left #tiptip_arrow_inner {
-	margin-top: -6px;
-	margin-left: -7px;
+	border-right-width: 0px;
 	border-left-color: rgb(25,25,25);
 	border-left-color: rgba(25,25,25,0.92);
 }
@@ -129,6 +128,19 @@
 	border-left-color: #444444;
 }
 
+#tiptip_holder.tip_top #tiptip_arrow,
+#tiptip_holder.tip_right #tiptip_arrow,
+#tiptip_holder.tip_bottom #tiptip_arrow,
+#tiptip_holder.tip_left #tiptip_arrow 
+{border-color:transparent;}
+
 #tiptip_holder.alt #tiptip_content {
 	background-color: #444444; border: 1px solid White; border-radius: 3px; box-shadow: 0 0 3px #555555; color: #FFFFFF; font-size: 11px; padding: 4px 8px; text-shadow: 0 0 1px Black;
 }
+
+/*corner tips*/
+#tiptip_holder.tip_left_top #tiptip_arrow,
+#tiptip_holder.tip_right_top #tiptip_arrow,
+#tiptip_holder.tip_left_bottom #tiptip_arrow,
+#tiptip_holder.tip_right_bottom #tiptip_arrow
+{display:none;}
